# example_package_itayair

./: README.md  setup.cfg  setup.py
src/: __init__.py  divide_and_mutiply.py
src/UMLS/: umls_loader.py  umls_server_executor.py  umls_services.py
src/example_package_itayair.egg-info/: PKG-INFO  SOURCES.txt
